--- a/weather-app/src/Components/WeatherApp.css
+++ b/weather-app/src/Components/WeatherApp.css
@@ -120,7 +120,8 @@
     font-size: 1rem;
     display: flex;
     column-gap: 1rem;
-    color: #484569;
+    color: #2f2e57;
+    
 }
 
 .minMaxTemp > div{
